--- a/vignettes/IntroductionToStrategus.Rmd
+++ b/vignettes/IntroductionToStrategus.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 
 # Introduction to Strategus
 
-The `Strategus` package is a new approach for coordinating and executing analytics using HADES modules. The goal is to have OHDSI network sites install `Strategus` and exchange an analysis specification in JSON format to execute a network study. The idea is that the analysis specification will capture all of the design choices that pertain to the methods used in a given study. The analysis specification format aims to allow for combining different HADES modules together as a pipeline to execute a study. In addition, the analysis specification makes use of specific HADES module versions to clearly state which modules are required to run the study with the aim to make the execution and results reproducible. 
+The `Strategus` package is a new approach for coordinating and executing analytics using HADES modules. The goal is to have OHDSI network sites install `Strategus` and exchange an analysis specification in JSON format to execute a network study. The analysis specification will capture all of the design choices that pertain to the methods used in a given study. The analysis specification format aims to allow for combining different HADES modules together as a pipeline to execute a study. In addition, the analysis specification makes use of specific HADES module versions to clearly state which modules are required to run the study with the aim to make the execution and results reproducible. 
 
 ## Using Strategus
 
